# EpiFire

./: README  configure.ac
research/: Makefile  dynet.cpp  tmp_research.cpp
src/: Makefile.am  Network.cpp  Utility.cpp  Utility.h  main.cpp
